portico_signin: Fix content wrapping too much.
Due to `max-width: min-content` being used and `min-width: max-content`
not being applied since it is not present outside of development
environment, the text wrapped after every word.

The intention of this CSS was to restrict the max-width of the
`white-box` and I think 800px is a good max-width after which
content should wrap.

--- a/static/styles/portico/portico_signin.css
+++ b/static/styles/portico/portico_signin.css
@@ -1288,12 +1288,8 @@ button#register_auth_button_gitlab {
     word-break: break-all;
 }
 
-@media (width >= 600px) {
+@media (width >= 800px) {
     .account-creation .white-box {
-        max-width: min-content;
-
-        .alert-info {
-            min-width: max-content;
-        }
+        max-width: 800px;
     }
 }
